<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/nav_diagnostics"
        android:icon="@drawable/ic_diagnostics"
        android:title="@string/nav_diagnostics" />

    <item
        android:id="@+id/nav_ecu_flash"
        android:icon="@drawable/ic_ecu_flash"
        android:title="@string/nav_ecu_flash" />

    <item
        android:id="@+id/nav_tuning"
        android:icon="@drawable/ic_tuning"
        android:title="@string/nav_tuning" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
